[gd_scene load_steps=5 format=3 uid="uid://vwxwcpwamyof"]

[ext_resource type="Script" path="res://addons/godot_rulebook/editor/core/editor_rulebook.gd" id="1_iqy4v"]
[ext_resource type="Texture2D" uid="uid://b1v7jayblixhl" path="res://addons/godot_rulebook/editor/assets/icons/remove.svg" id="2_i8s3f"]
[ext_resource type="PackedScene" uid="uid://c8hvagjekmndj" path="res://addons/godot_rulebook/editor/other/editable_name.tscn" id="2_nr8vm"]

[sub_resource type="LabelSettings" id="LabelSettings_y5cf4"]
font_size = 32

[node name="EditorRulebook" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_iqy4v")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="Contents" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeaderMargin" type="MarginContainer" parent="ScrollContainer/Contents"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Header" type="HBoxContainer" parent="ScrollContainer/Contents/HeaderMargin"]
layout_mode = 2

[node name="RulebookName" parent="ScrollContainer/Contents/HeaderMargin/Header" instance=ExtResource("2_nr8vm")]
unique_name_in_owner = true
layout_mode = 2
editable_name = "Rulebook name"
label_settings = SubResource("LabelSettings_y5cf4")

[node name="DeleteRulebook" type="Button" parent="ScrollContainer/Contents/HeaderMargin/Header"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_i8s3f")

[node name="RulesMargin" type="MarginContainer" parent="ScrollContainer/Contents"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="Rules" type="VBoxContainer" parent="ScrollContainer/Contents/RulesMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="AddRule" type="Button" parent="ScrollContainer/Contents/RulesMargin/Rules"]
unique_name_in_owner = true
layout_mode = 2
text = " + Rule"
alignment = 0

[connection signal="name_changed" from="ScrollContainer/Contents/HeaderMargin/Header/RulebookName" to="." method="_on_rulebook_name_text_changed"]
[connection signal="pressed" from="ScrollContainer/Contents/HeaderMargin/Header/DeleteRulebook" to="." method="_on_delete_rulebook_pressed"]
[connection signal="pressed" from="ScrollContainer/Contents/RulesMargin/Rules/AddRule" to="." method="_on_add_rule_pressed"]
